# OpenScan3

./: .gitignore  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  software_dev_outline.md
.github/workflows/: dispatch.yml
.local/state/wireplumber/: stream-properties
app/: __init__.py  main.py
app/config/: __init__.py  camera.py  cloud.py  endstop.py  light.py  logger.py  motor.py  openscan.py  scan.py
app/controllers/: __init__.py  cloud.py  device.py  gpio.py  lights.py  motors.py  projects.py  scanner.py  scans.py  settings.py
app/controllers/cameras/: camera.py  cameras.py  gphoto2.py  linuxpy.py  picamera2.py  picamera2_focus.py  v4l2.py
app/controllers/hardware/: endstops.py  gpio.py  interfaces.py  lights.py  motors.py
app/controllers/services/: cloud.py  projects.py  scans.py
app/models/: __init__.py  camera.py  light.py  motor.py  paths.py  project.py  scan.py  scanner.py
app/routers/: __init__.py  cameras.py  cloud.py  develop.py  device.py  focus.py  gpio.py  io.py  lights.py  motors.py  openscan.py  paths.py  projects.py  scanner.py  scans.py  settings_utils.py  tasks.py
app/services/paths/: paths.py
app/tasks/: __init__.py
app/utils/: __init__.py
app/utils/paths/: optimization.py  paths.py
app/utils/photos/: __init__.py  heatmap.py  histogram.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOP.md  FIRMWARE_ENV.md  TASKS.md  WEBSOCKETS.md
docs/Camera/: EXTERNAL_TRIGGER.md  GPHOTO2_ADD_CAMERA.md  LINUXPY.md
flows/: flows.json
node-red/: flows.json  nodered-plugins.txt  settings.js
openscan/: __init__.py  cli.py  main.py
openscan/config/: camera.py  cloud.py  logger.py  scan.py
openscan/controllers/: device.py
openscan/controllers/hardware/: endstops.py  interfaces.py  lights.py  motors.py
openscan/controllers/services/: cloud.py  cloud_settings.py  device_events.py  focus_stacking.py  projects.py  scans.py
openscan/models/: camera.py  light.py  motor.py  paths.py  project.py  scan.py  scanner.py  task.py
openscan/resources/: __init__.py
openscan/resources/settings/: __init__.py  default_logging.json  openscan_firmware.json
openscan/routers/: cameras.py  cloud.py  develop.py  device.py  focus_stacking.py  gpio.py  lights.py  motors.py  openscan.py  paths.py  projects.py  settings_utils.py  tasks.py  websocket.py
openscan/routers/next/: motors.py
openscan/routers/v0_5/: cameras.py  settings_utils.py
openscan/tasks/community/: focus_stacking_task.py
openscan/utils/: settings.py
openscan/utils/paths/: optimization.py  paths.py
openscan/utils/photos/: stacking.py
openscan_firmware/: __init__.py  __main__.py  cli.py  main.py
openscan_firmware/config/: camera.py  cloud.py  endstop.py  external_trigger_run.py  firmware.py  light.py  logger.py  motor.py  scan.py  trigger.py
openscan_firmware/controllers/: device.py
openscan_firmware/controllers/hardware/: endstops.py  gpio.py  interfaces.py  lights.py  motors.py  triggers.py
openscan_firmware/controllers/services/: cloud.py  cloud_settings.py  device_events.py  external_trigger_runs.py  focus_stacking.py  projects.py  scans.py
openscan_firmware/models/: camera.py  external_trigger_run.py  light.py  motor.py  project.py  scan.py  scanner.py  trigger.py
openscan_firmware/routers/: cameras.py  device.py
openscan_firmware/routers/next/: cameras.py  cloud.py  develop.py  device.py  external_trigger_runs.py  lights.py  motors.py  projects.py  triggers.py
openscan_firmware/routers/v0_6/: cameras.py  cloud.py  develop.py  device.py  gpio.py  openscan.py  projects.py  tasks.py
openscan_firmware/routers/v0_7/: cameras.py  cloud.py  device.py  lights.py  motors.py  projects.py
openscan_firmware/routers/v0_8/: cameras.py  device.py  gpio.py  (+2 more)
openscan_firmware/utils/: dir_paths.py  firmware_state.py  inactivity_timer.py  pwm_hardware.py  qr_reader.py  wifi.py
scripts/: README.md  camera_report.sh  generate_openapi_json.py
scripts/openapi/: openapi_latest.json  openapi_next.json  openapi_v0.3.json  openapi_v0.4.json  openapi_v0.5.json  openapi_v0.6.json  openapi_v0.7.json  openapi_v0.8.json  openapi_v0.9.json
settings/: advanced_logging.json  camera_arducam_64mp.json  default.json  default_camera_settings.json  default_classic_greenshield.json  default_logging.json  default_mini_blackshield.json  default_mini_greenshield.json  default_minimal_config.json  light_ringlight.json  mini_greenshield.json  motor_rotor.json  motor_turntable.json  openscan_firmware.json
settings/device/: default_classic_greenshield.json  default_miciomax.json  default_midi_blackshield.json  default_mini_blackshield.json  default_mini_greenshield.json  example_custom.json
settings/firmware/: firmware_settings.json  openscan_firmware.json
settings/logging/: advanced_logging.json  default_logging.json
tests/: cloud.py  conftest.py  crop_images.py  photoset.py
tests/config/: test_cloud_config.py  test_logger.py  test_scan_config.py
tests/controllers/: test_device_controller.py  test_settings.py
tests/routers/: test_cameras_raw_endpoint.py  test_cameras_router.py  test_cloud_router.py  test_develop_router.py  test_device_router.py  test_device_router_v0_8.py  test_firmware_router.py  test_focus_stacking_router.py  test_motors_router.py  test_next_cameras_router.py  test_next_develop_router.py  test_next_external_trigger_router.py  test_next_external_trigger_runs_router.py  test_next_gpio_router.py  test_project_scan_endpoints.py  test_projects_api.py  test_projects_model_download.py  test_scan_settings_openapi.py  test_v0_5_light_settings.py  test_v0_5_settings_endpoints.py  test_v0_6_light_settings.py  test_websocket_router.py
tests/utils/: test_dir_paths_utils.py  test_firmware_state.py  test_paths.py  test_settings_utils.py
(+89 files in other folders)
