[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "openscan3"
version = "0.1.0"
description = "OpenScan3 - Raspberry Pi based photogrammetry scanner (FastAPI-based application)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "OpenScan3 Contributors" }
]
keywords = ["photogrammetry", "raspberry-pi", "fastapi", "3d", "scanner"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX :: Linux",
]

# Dependencies migrated from requirements.txt (runtime only; test/dev will be added later as extras)
dependencies = [
  "rpi.gpio==0.7.1",
  "fastapi==0.115.6",
  "uvicorn==0.34.0",
  "gphoto2==2.5.1",
  "linuxpy==0.20.0",
  "pillow==11.1.0",
  "matplotlib==3.10.0",
  "numpy==1.24.2",
  "picamera2==0.3.24",
  "orjson==3.10.15",
  "python-dotenv==1.0.1",
  "aiofiles==24.1.0",
  "zipstream-ng==1.5.0",
  "gpiozero==2.0.1",
  "fastapi-versionizer==4.0.1",
  "python-json-logger==3.3.0",
  "pydantic==2.11.3",
  "requests==2.28.1",
  "typing-extensions==4.14.1",
  "anyio==4.10.0",
  "piexif==1.1.3",
  "pydantic_core==2.33.1",
]

[project.urls]
Homepage = "https://github.com/esto-openscan/OpenScan3"
Issues = "https://github.com/esto-openscan/OpenScan3/issues"

[project.scripts]
openscan = "openscan.cli:main"
openscan3 = "openscan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["openscan"]

# Ensure packaged defaults (JSON) are included in the wheel
[tool.hatch.build.targets.wheel.package-data]
"openscan.resources.settings" = ["*.json"]

[tool.hatch.build.targets.sdist]
include = [
  "openscan/**",
  "README.md",
  "LICENSE",
  "requirements.txt",
]
