[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openscan3"
version = "0.4.1"
description = "OpenScan3 - Raspberry Pi based photogrammetry scanner (FastAPI-based application)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "OpenScan3 Contributors" }
]
keywords = ["openscan", "photogrammetry", "raspberry-pi", "fastapi", "3d", "scanner"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX :: Linux",
]

dependencies = [
  "rpi.gpio==0.7.1",
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "gphoto2==2.5.1",
  "linuxpy==0.20.0",
  "pillow==11.1.0",
  "matplotlib==3.10.0",
  "numpy>=1.24.2",
  "picamera2==0.3.24",
  "orjson==3.10.15",
  "python-dotenv==1.0.1",
  "aiofiles==24.1.0",
  "zipstream-ng==1.5.0",
  "gpiozero==2.0.1",
  "python-json-logger==3.3.0",
  "pydantic==2.11.3",
  "requests==2.28.1",
  "typing-extensions==4.14.1",
  "anyio==4.10.0",
  "piexif==1.1.3",
  "pydantic_core==2.33.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
]

[project.urls]
Homepage = "https://github.com/OpenScan-org/OpenScan3"
Issues = "https://github.com/OpenScan-org/OpenScan3/issues"

[project.scripts]
openscan = "openscan.cli:main"
openscan3 = "openscan.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["openscan*"]

[tool.setuptools.package-data]
"openscan" = ["**/*.json"]

[tool.setuptools.data-files]
"openscan/settings/device" = [
  "settings/device/*.json",
]
"openscan/settings/firmware" = [
  "settings/firmware/*.json",
]
"openscan/settings/logging" = [
  "settings/logging/*.json",
]
